JPA Container WORKIN' organization view  + main widget org creation todo: event creation + expenses

--- a/ExpenseManagerApp/.project
+++ b/ExpenseManagerApp/.project
@@ -46,6 +46,11 @@
 			</arguments>
 		</buildCommand>
 		<buildCommand>
+			<name>org.zeroturnaround.eclipse.remoting.remotingBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>org.eclipse.m2e.core.maven2Builder</name>
 			<arguments>
 			</arguments>
@@ -62,5 +67,6 @@
 		<nature>org.jboss.tools.jst.web.kb.kbnature</nature>
 		<nature>org.jboss.tools.cdi.core.cdinature</nature>
 		<nature>org.zeroturnaround.eclipse.jrebelNature</nature>
+		<nature>org.zeroturnaround.eclipse.remoting.remotingNature</nature>
 	</natures>
 </projectDescription>
